# tensortest

./: .gitignore  README.md  dataset.py  hello.py  predict.py  pyproject.toml  train.py
